hotfix - fix firefox compatibility (#105)
* context for breakpoints added

* set mobile scss, passed breakpoints

* added skeleton for mobile response

* rearranged mobile and desktop views to minimize scss bleeding

* events scrolling frame

* fixed width issue on larger screens

* cleanup

* improved responsiveness for tablets, CLAMPED TEXT PROPERLY through max no. of text lines, fixed button text alignment

* button alignment ++

* removed framer hover effects for tablet and smaller screens

* fixed overwritten scss

* fixed events not showing up on tablet portrait

* finally responsive

* cleaning and reame

* firefox compatibility

--- a/src/components/cards/largeEventCard/index.scss
+++ b/src/components/cards/largeEventCard/index.scss
@@ -34,6 +34,7 @@
     height: 70%;
     position: absolute;
     top: 0;
+    width: 100%;
     overflow: hidden;
 
     .event-image__img {
